--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -3,6 +3,11 @@
   src: url(../fonts/Steinbeck.otf);
   font-weight: 400;
 }
+@font-face {
+  font-family: "Rotterburg";
+  src: url(../fonts/Rotterburg.otf);
+  font-weight: 400;
+}
 body {
   background-color: #191919;
   margin: 0;
@@ -31,4 +36,26 @@ a {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 16px;
+}
+.user__card-content h1 {
+  font-family: "Rotterburg";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 22px;
+  color: #c9ac8c;
+}
+.user__card-content h2 {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 144.4%;
+  color: rgba(255, 255, 255, 0.6);
+}
+.user__card-content p {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 144.4%;
+  color: rgba(255, 255, 255, 0.6);
 }
